<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>CIS</groupId>
  <artifactId>CIS</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <packaging>jar</packaging>
  <build>
    <sourceDirectory>src</sourceDirectory>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.5.1</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>
            <plugin>
	  	<groupId>org.apache.maven.plugins</groupId>
	   	<artifactId>maven-assembly-plugin</artifactId>
	    <executions>
    	    <execution>
        	    <phase>package</phase>
            	<goals>
                	<goal>single</goal>
	            </goals>
    	        <configuration>
        	        <archive>
            	    <manifest>
                	    <mainClass>
                    	    handshaker.core.HandshakeScanner
                    	</mainClass>
	                </manifest>
	                </archive>
    	            <descriptorRefs>
        	            <descriptorRef>jar-with-dependencies</descriptorRef>
            	    </descriptorRefs>
	            </configuration>
	        	</execution>
	 		</executions>
		</plugin>
    </plugins>
  </build>
  <dependencies>
  	<dependency>
  		<groupId>com.fasterxml.jackson.core</groupId>
  		<artifactId>jackson-core</artifactId>
  		<version>2.9.5</version>
  	</dependency>
  	<dependency>
  		<groupId>com.fasterxml.jackson.core</groupId>
  		<artifactId>jackson-databind</artifactId>
  		<version>2.9.5</version>
  	</dependency>
  	<dependency>
  		<groupId>com.fasterxml.jackson.core</groupId>
  		<artifactId>jackson-annotations</artifactId>
  		<version>2.9.5</version>
  	</dependency>
  	<dependency>
  		<groupId>org.json</groupId>
  		<artifactId>json</artifactId>
  		<version>20180130</version>
  	</dependency>
  	<dependency>
  		<groupId>org.xerial</groupId>
  		<artifactId>sqlite-jdbc</artifactId>
  		<version>3.21.0.1</version>
  	</dependency>
  </dependencies>
</project>